[package]
name = "miausu-pp"
version = "4.1.0"
authors = ["MaxOhn <ohn.m@hotmail.de>", "tsunyoku <tsunyoku@gmail.com>", "ldci4 <anoletenu@gmail.com>", "9down <artemyakovle2.0@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/9down/new-miausu-pp-rs"
description = "osu! difficulty and pp calculation for all modes"
keywords = ["osu", "pp", "stars", "async"]

[features]
default = []
async_std = ["async-std"]
async_tokio = ["tokio"]

[dependencies.async-std]
version = "1.9"
optional = true
default-features = false
features = ["async-io", "std"]

[dependencies.tokio]
version = "1.2"
optional = true
default-features = false
features = ["fs", "io-util"]

[dev-dependencies.tokio]
version = "1.2"
default-features = false
features = ["fs", "rt"]

[dev-dependencies.async-std]
version = "1.9"
default-features = true
